// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`format > basic 1`] = `
"<template>
  <p>This is BasicFormat</p>
</template>

<script>
export default {
  name: 'BasicFormat'
}
</script>

<style scoped>
#app {
  color: red;
}
</style>

<i18n lang=\\"json\\">
[object Promise]</i18n>
"
`;

exports[`format > multi 1`] = `
"<template>
  <p>This is MultiFormat</p>
</template>

<i18n lang=\\"json\\">
[object Promise]</i18n>

<script>
export default {
  name: 'MultiFormat'
}
</script>

<i18n lang=\\"yaml\\">
[object Promise]</i18n>

<style scoped>
#app {
  color: red;
}
</style>

<i18n lang=\\"json5\\">
[object Promise]</i18n>
"
`;

exports[`format > nested 1`] = `
"<template>
  <p>This is Nested resources</p>
</template>

<script>
export default {
  name: 'App'
}
</script>

<i18n lang=\\"json\\" global>
[object Promise]</i18n>

<style scoped>
#app {
  color: red;
}
</style>
"
`;

exports[`format > oneline 1`] = `
"<template>
  <p>This is Oneline</p>
</template>

<script>
export default { name: 'App' }
</script>

<style scoped>
#app { color: red; }
</style>

<i18n lang=\\"json\\">
[object Promise]</i18n>"
`;

exports[`format > vue 2 1`] = `
"<template functional>
  <p>This is functional component</p>
</template>

<i18n lang=\\"json\\">
[object Promise]</i18n>

<i18n lang=\\"json\\">
[object Promise]</i18n>"
`;
